@@ -1,4 +1,6 @@
 ver 0.20.1 (not yet released)
+* mixer
+  - alsa: normalize displayed volume according to human perception
 * fix crash with volume_normalization enabled
 
 ver 0.20 (2017/01/04)
